<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/lightPink"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddNoteActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/primaryTextMagenta"
        android:text="@string/note"
        android:textSize="24sp"
        android:textAlignment="center"
        android:textStyle="bold"
        />

    <EditText
        android:id="@+id/et_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/titleHint"
        android:textColor="@color/primaryTextMagenta"
        android:autofillHints="@string/titleHint"
        android:inputType="text"
        />

    <EditText
        android:id="@+id/et_content"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:hint="@string/contentHint"
        android:textColor="@color/secondaryTextMagenta"
        android:inputType="textMultiLine"
        android:layout_weight="1"
        android:gravity="top"
        android:autofillHints="@string/contentHint"
        />

    <Button
        android:id="@+id/btn_save"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/lightPink"
        android:textColor="@color/primaryTextMagenta"
        android:text="@string/save"/>
</LinearLayout>